--- a/client2/nueralcity/package.json
+++ b/client2/nueralcity/package.json
@@ -8,6 +8,7 @@
     "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-data-grid": "^6.15.0",
     "@mui/x-date-pickers": "^6.13.0",
     "@mui/x-date-pickers-pro": "^6.13.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +18,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "~3.0.3-beta-1",
     "react-router-dom": "^6.15.0",
