--- a/client2/nueralcity/package.json
+++ b/client2/nueralcity/package.json
@@ -18,7 +18,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-export-table-to-excel": "^1.0.6",
+    "react-json-to-excel": "^1.0.7",
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "~3.0.3-beta-1",
     "react-router-dom": "^6.15.0",
