--- a/client2/nueralcity/package.json
+++ b/client2/nueralcity/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.9",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +26,8 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "victory": "^36.6.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
