--- a/.gitignore
+++ b/.gitignore
@@ -129,23 +129,23 @@ dmypy.json
 .pyre/
 
 # dependencies
-/client2/nueralcity/node_modules
-/client2/nueralcity/.pnp
-/client2/nueralcity/.pnp.js
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
-/client2/nueralcity/coverage
+/coverage
 
 # production
-/client2/nueralcity/build
+/build
 
 # misc
-/client2/nueralcity/.DS_Store
-/client2/nueralcity/.env.local
-/client2/nueralcity/.env.development.local
-/client2/nueralcity/.env.test.local
-/client2/nueralcity/.env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-/client2/nueralcity/npm-debug.log*
-/client2/nueralcity/yarn-debug.log*
-/client2/nueralcity/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
