--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -18,7 +18,9 @@
     "dayjs": "^1.11.9",
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-json-to-excel": "^1.0.7",
     "react-leaflet": "^4.2.1",
