--- a/client2/neural_city/Dockerfile
+++ b/client2/neural_city/Dockerfile
@@ -1,6 +1,6 @@
 # Use an official Node.js runtime as the base image, Apple M1 chip doing its incompatibility magic just adding the platform in your Dockerfile seems to solve the problem
 # FROM --platform=linux/amd64 node:19.6.0-alpine
-FROM node:19.6.0-alpine
+FROM node:19.6.0-alpine as build
 # Set the working directory within the container
 WORKDIR /app
 
@@ -13,19 +13,12 @@ RUN npm install
 # Copy the rest of the application code to the container
 COPY . .
 
-# Copy nginx configuration
+# Run the react app 
+RUN npm run build
+
+# stage 2 - build the final image and copy the react build files
+FROM nginx
 COPY ./nginx/nginx.conf /etc/nginx/nginx.conf 
 
-# Build the React app
-EXPOSE 3000
-
-# Run the react app 
-CMD ["npm", "start"]
-
-# Run the container using the following command
-# docker run \
-#     -it \
-#     --rm \
-#     -p 3001:3000 \
-#     neural-city:latest
-
+COPY --from=build /app/build /usr/share/nginx/html 
+EXPOSE 80
