--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
+    "react-js-loader": "^0.1.3",
     "react-json-to-excel": "^1.0.7",
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "~3.0.3-beta-1",
