--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -27,6 +27,7 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "~3.0.3-beta-1",
     "react-leaflet-kml": "^2.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "victory": "^36.6.11",
