--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -20,6 +20,7 @@
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
     "react-js-loader": "^0.1.3",
