--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -17,11 +17,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.9",
+    "docx": "^8.5.0",
     "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dates": "^21.8.0",
+    "react-docx": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-image-zoom": "^1.3.1",
     "react-js-loader": "^0.1.3",
@@ -32,7 +35,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "victory": "^36.6.11",
+    "victory": "^36.9.1",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
