--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.9",
     "docx": "^8.5.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.5",
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
