--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.48.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.9",
     "docx": "^8.5.0",
@@ -59,5 +60,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "license": "MIT"
 }
