--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,11 +5,13 @@ services:
     image: mongo
     ports:
       - "27017:27017"
-  # web_app:
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context: .
-  #   depends_on:
-  #     - db
-  #   ports:
-  #     - "5000:5000"
+  web_app:
+    build:
+      dockerfile: Dockerfile
+      context: .
+    depends_on:
+      - db
+    ports:
+      - "5000:5000"
+    environment:
+      - DEBUG=True
