--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,8 @@ jobs:
       shell: bash
       run: |
         # Copy all project files to the EC2 instance
-        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/op-hastinapur-deployo/
+        echo ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/op-hastinapur-deploy/
+        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/op-hastinapur-deploy/
         
         # SSH into the EC2 instance and deploy
         ssh -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
