--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,9 @@ jobs:
       run: |
         # Copy all project files to the EC2 instance
         echo ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/op-hastinapur-deploy/
-        
+
+        echo "Started copying"
+
         scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ubuntu@$23.22.4.169:/home/ubuntu/op-hastinapur-deploy/
 
         # SSH into the EC2 instance and deploy
