--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,13 +23,11 @@ jobs:
       shell: bash
       run: |
         # Copy all project files to the EC2 instance
-        echo ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/op-hastinapur-deploy/
-
         echo "Started copying"
 
-        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ubuntu@23.22.4.169:/home/ubuntu/op-hastinapur-deploy/
+        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/op-hastinapur-deploy/
 
         # SSH into the EC2 instance and deploy
-        ssh -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem ubuntu@23.22.4.169 "
+        ssh -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
           cd /home/${{ secrets.EC2_USER }}/op-hastinapur-deploy &&
           sudo docker-compose up --build -d"
