--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-alpine
 
 
-# set the working directory in the container to /app
+# Set the working directory in the container to /app
 WORKDIR /app
 
 # add the current directory to the container as /app
@@ -10,9 +10,8 @@ WORKDIR /app
 # Copy 
 COPY . .
 
-# execute pip command, pip install -r
+# execute pip command, pip install -r, create a virtual env
 RUN pip install -r requirements.txt
-
 
 # Expose Port
 EXPOSE 5000
