--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,7 +23,7 @@ jobs:
       shell: bash
       run: |
         # Copy all project files to the EC2 instance
-        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/op-hastinapur-deploy/
+        scp -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem -r ./server/* ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/op-hastinapur-deploy/
 
         # SSH into the EC2 instance and deploy
         ssh -o StrictHostKeyChecking=no -i ~/neural-city-backend.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
