--- a/client2/neural_city/package.json
+++ b/client2/neural_city/package.json
@@ -32,10 +32,14 @@
     "react-json-to-excel": "^1.0.7",
     "react-leaflet": "^4.2.1",
     "react-leaflet-heatmap-layer-v3": "~3.0.3-beta-1",
+    "react-multilevel-dropdown": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
+    "react-style-classes": "^2.0.3",
     "react-toastify": "^10.0.5",
+    "sass": "^1.83.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
