--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,8 @@ h11==0.14.0
 idna==3.4
 lazy-model==0.2.0
 motor==3.0.0
+numpy==1.24.4
+pandas==2.0.3
 pydantic==1.10.2
 pymongo==4.2.0
 python-dateutil==2.8.2
@@ -15,5 +17,6 @@ six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
 toml==0.10.2
+typing-extensions==4.11.0
 tzdata==2024.1
 uvicorn==0.18.3
