Updated nginx configurations

--- a/client2/neural_city/nginx/nginx.conf
+++ b/client2/neural_city/nginx/nginx.conf
@@ -1,25 +1,76 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
-    worker_connections 1024;
+    worker_connections 1024;  # Allow more concurrent connections
+    multi_accept on;          # Accept as many connections as possible
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;               # Faster file transfers
+    tcp_nopush on;             # Send headers in one packet
+    tcp_nodelay on;             # Reduce latency
+    keepalive_timeout 65;      # Keep connections alive for reuse
+    types_hash_max_size 4096;  # Bigger hash table for MIME lookups
+    server_tokens off;         # Hide nginx version for security
+
+    # Enable gzip for better performance
+    gzip on;
+    gzip_min_length 1024;
+    gzip_comp_level 5;         # Balance compression & CPU usage
+    gzip_vary on;              # Support proxies
+    gzip_proxied any;
+    gzip_types
+        text/plain
+        text/css
+        text/javascript
+        application/javascript
+        application/json
+        application/xml
+        application/xml+rss
+        image/svg+xml;
+
     server {
         listen 3000;
-        include /etc/nginx/mime.types;
 
-        gzip on;
-        gzip_min_length 1000;
-        gzip_proxied expired no-cache no-store private auth;
-        gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        root /usr/share/nginx/html;
+        index index.html;
 
+        # --- Security Headers ---
+        # Prevent browsers from MIME type sniffing and executing files as a different type
+        add_header X-Content-Type-Options "nosniff" always;
 
+        # Prevent this site from being embedded in an iframe (mitigates clickjacking attacks)
+        add_header X-Frame-Options "SAMEORIGIN" always;
+
+        # Enable basic XSS protection in older browsers (modern browsers rely on CSP)
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # Limit what referrer information is sent to external sites
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Restrict access to certain browser APIs (here: geolocation, microphone, camera are disabled)
+        add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
+        # Restrict where resources (scripts, styles, images, fonts) can be loaded from
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:;" always;
+
+        # Cache static assets aggressively
+        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|mp4)$ {
+            expires 6M;
+            access_log off;
+            add_header Cache-Control "public, no-transform";
+            try_files $uri =404;
+        }
+
+        # React SPA fallback
         location / {
-            root /usr/share/nginx/html;
-            index  index.html index.htm;
-            include /etc/nginx/mime.types;
             try_files $uri $uri/ /index.html;
         }
+
+        # Optional: Handle 404 without exposing nginx default page
+        error_page 404 /index.html;
     }
 }
