--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,13 @@ upstream neuralcity-be {
 }
 
 # ===============================
+# Define rate limit zones
+# ===============================
+# Store rate limit counters in shared memory (10 MB can store thousands of IP counters)
+# Limit: 10 requests per second per IP, burst up to 20 without delaying
+limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+# ===============================
 # Main server block
 # ===============================
 server {
@@ -42,6 +49,9 @@ server {
     # BACKEND API
     # ===============================
     location /api/v1/ {
+        # Apply rate limiting
+        limit_req zone=api_limit burst=20 nodelay;
+        
         proxy_pass http://neuralcity-be;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
