--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -51,7 +51,7 @@ server {
     location /api/v1/ {
         # Apply rate limiting
         limit_req zone=api_limit burst=20 nodelay;
-        
+
         proxy_pass http://neuralcity-be;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -88,7 +88,7 @@ server {
     }
 
     # ===============================
-    # LOGGING FORMAT
+    # LOGGING FORMAT, LOG this to ELK later
     # ===============================
     # log_format main '$remote_addr - $remote_user [$time_local] "$request" '
     #                 '$status $body_bytes_sent "$http_referer" '
